k8s/frontend_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/eficode-academy/quotes-flask-frontend:release
          name: frontend
          ports:
            - containerPort: 5000
